--- a/views/create_Account.html
+++ b/views/create_Account.html
@@ -85,25 +85,25 @@
             <form action="" class="formCreateAccount">
                 <div class="col-lg-6 col-sm-12 form">
                     <article class="form-floating">
-                        <label for="floatingInput">First name</label>
-                        <input type="text" class="mb-3 formControl input" id="floatingInput" placeholder="Enter your first name">
+                        <label for="floatingInput"></label>First name
+                        <input type="text" class="formControl input" id="floatingInput" placeholder="Enter your first name">
                     </article>
                     <article class="form-floating">
-                        <label for="floatingInput">Last name</label>
-                        <input type="text" class="mb-3 formControl input" id="floatingInput" placeholder="Enter your last name">
+                        <label for="floatingInput"></label>Last name
+                        <input type="text" class="formControl input" id="floatingInput" placeholder="Enter your last name">
                     </article>
                     <article class="form-floating">
-                        <label for="floatingInput">Email</label>
-                        <input type="email" class="mb-3 formControl input" id="floatingInput" placeholder="Enter your email">
+                        <label for="floatingInput"></label>Email
+                        <input type="email" class="formControl input" id="floatingInput" placeholder="Enter your email">
                     </article>
                     <article class="form-floating">
-                        <label for="floatingPassword">Password</label>
-                        <input type="password" class="mb-0 formControl input" id="floatingPassword" placeholder="Enter your email password">
+                        <label for="floatingPassword"></label>Password
+                        <input type="password" class="formControl input" id="floatingPassword" placeholder="Enter your password">
                     </article>
 
                     <article class="ctaToCreateAccount">
-                        <input class="btnCreate" type="Create">
-                        <p>Do you have an account with us</p>
+                        <input class="btnCreateAccount" type="Submit">
+                        <p>¿Do you have an account with us?</p>
                         <a href="sign_In.html" class="toSignIn">Sign in</a>
                     </article>
                 </div>
@@ -113,7 +113,7 @@
     </main>
 
     <!-- Footer -->
-<!--
+
     <footer class="footerContainer">
         <div class="footer">
             <section class="socialMedia">
@@ -143,7 +143,7 @@
                 <p> Medellin - Colombia</p>
             </div>
         </section>
-    </footer> -->
+    </footer>
 
     <!-- Bootstrap -->
 
