--- a/views/create_Account.html
+++ b/views/create_Account.html
@@ -93,8 +93,8 @@
                         <input type="text" class="formControl input" id="floatingInput" placeholder="Enter your last name">
                     </article>
                     <article class="form-floating">
-                        <label for="floatingInput"></label>Email
-                        <input type="email" class="formControl input" id="floatingInput" placeholder="Enter your email">
+                        <label for="floatingInput"></label>Email address
+                        <input type="email" class="formControl input" id="floatingInput" placeholder="Enter your Email">
                     </article>
                     <article class="form-floating">
                         <label for="floatingPassword"></label>Password
