--- a/css/main.css
+++ b/css/main.css
@@ -352,7 +352,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   width: 50vw;
   height: auto;
   background-color: #ffffff;
-  box-shadow: 4px 4px 8px 0px #5c5c5c;
+  box-shadow: 4px 4px 8px 0px #181818;
   margin-top: 30px;
   margin-bottom: 200px;
 }
@@ -2057,7 +2057,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   width: 50vw;
   height: auto;
   background-color: #ffffff;
-  box-shadow: 4px 4px 8px 0px #5c5c5c;
+  box-shadow: 4px 4px 8px 0px #181818;
   margin-top: 30px;
   margin-bottom: 200px;
 }
