--- a/scss/_sign_In.scss
+++ b/scss/_sign_In.scss
@@ -22,7 +22,7 @@
         width: 50vw;
         height: auto;
         background-color: #ffffff;
-        box-shadow: 4px 4px 8px 0px #5c5c5c;
+        box-shadow: 4px 4px 8px 0px #181818;
         margin-top:30px;
         margin-bottom:200px;
         .form{
