Checkout Store SCSS & Views

--- a/views/store.html
+++ b/views/store.html
@@ -41,17 +41,18 @@
             <ul>
                 <li><a href="#"><img class="icon" src="../img/moon_Icon.svg" alt=""></a></li>
                 <li><a href="sign_In.html"><img class="icon" src="../img/user_Icon.svg" alt=""></a></li>
+                <input id="whishListSide" type="checkbox">
+                <label for="whishListSide" class="whishHeadLine">
+                    <img class="whishListIcon" src="../img/whishlist_White_Icon.svg" alt="Heart icon">
+                </label>
+                <input id="cart" type="checkbox">
+                <label for="cart" class="cartShop">
+                    <img class="cartIcon" src="../img/empty_Shopping_Cart.svg" alt=""></li>
+                </label>
             </ul>
         </section>
 
-            <label for="cart" class="cartShop">
-                <img class="cartIcon" src="../img/empty_Shopping_Cart.svg" alt=""></li>
-            </label>
-
-            <input id="whishListSide" type="checkbox">
-            <label for="whishListSide" class="whishHeadLine">
-                <img class="whishListIcon" src="../img/whishlist_White_Icon.svg" alt="Heart icon">
-            </label>
+        <!-- MenuSide -->
 
         <nav class="menuSide">
             <section class="top">
@@ -168,21 +169,18 @@
         <!-- Cart -->
 
         <!-- <section class="sectionShop">
-            <input id="cart" type="checkbox">
             <label for="cart" class="cartShop">
             </label>
-
             <nav class="menuCart">
                 <label for="cart" class="cartShop">
                     <img class="closeCross" src="../img/close_Cross.svg" alt="Close cross icon">
                 </label>
             </nav>
-
         </section> -->
 
         <!-- WhishList -->
 
-        <section class="sectionWhishList">
+        <!-- <section class="sectionWhishList">
 
                 <label for="whishListSide" class="whishHeadLine">
                     <img class="closeCross" src="../img/close_Cross.svg" alt="Close cross icon">
@@ -227,7 +225,7 @@
                         </div>
                     </div>
                 </nav>
-        </section>
+        </section> -->
 
         <!-- Store -->
 
