--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -251,6 +251,8 @@
         }
     }
 
+    // Checkout this code
+
     // .sectionShop{
     //     .menuCart{
     //         width:30vw;
@@ -277,106 +279,106 @@
 
 
 
+    // Checkout this code
 
+    // .sectionWhishList{
+    //     width:25vw;
+    //     height: 100vh;
+    //     display:flex;
+    //     position: fixed;
+    //     top:0;
+    //     right:0;
+    //     z-index: 10px;
+    //     flex-direction: column;
+    //     justify-content:flex-start;
+    //     align-items: flex-start;
+    //     background-color: #ffffff;
+    //     overflow: hidden;
+    //     box-shadow: 0 0 10px 6px #070707;
+    //     z-index: 10;
+    //     padding-top: 60px;
+    //     transform: translate(100%);
+    //     transition: .3s ease-in-out;
+    //     .whishHeadLine{
+    //         .closeCross{
+    //             width:15px;
+    //             cursor: pointer;
+    //             position: absolute;
+    //             top:20px;
+    //             left:35px;
+    //             transform: rotate(0deg);
+    //             transition: all 0.3s ease-in-out;
+    //             &:hover{
+    //                 transform: rotate(270deg);
+    //             }
+    //         }
 
-    .sectionWhishList{
-        width:25vw;
-        height: 100vh;
-        display:flex;
-        position: fixed;
-        top:0;
-        right:0;
-        z-index: 10px;
-        flex-direction: column;
-        justify-content:flex-start;
-        align-items: flex-start;
-        background-color: #ffffff;
-        overflow: hidden;
-        box-shadow: 0 0 10px 6px #070707;
-        z-index: 10;
-        padding-top: 60px;
-        transform: translate(100%);
-        transition: .3s ease-in-out;
-        .whishHeadLine{
-            .closeCross{
-                width:15px;
-                cursor: pointer;
-                position: absolute;
-                top:20px;
-                left:35px;
-                transform: rotate(0deg);
-                transition: all 0.3s ease-in-out;
-                &:hover{
-                    transform: rotate(270deg);
-                }
-            }
-
-        }
-        .menuWhishList{
-            .choiceWhishList{
-                width: 80%;
-                display: flex;
-                flex-direction:column;
-                justify-content: space-between;
-                align-items:flex-start;
-                margin: 0px auto;
-                .whishListWord{
-                    width: inherit;
-                    font-size: 1.3rem;
-                    font-family: $fontJura;
-                    color:#BC2327;
-                    font-weight: 600;
-                    margin:0px ;
-                }
-                .whish{
-                    .category{
-                        display: flex;
-                        flex-direction: row;
-                        justify-content: space-between;
-                        align-items: flex-start;
-                        padding: 20px 0px;
-                        border-bottom: 1px solid #e4e4e4;
-                        .titleWhishList{
-                            font-size: 1rem;
-                            font-family: $fontJura;
-                            color:#BC2327;
-                            font-weight: 600;
-                            margin: 15px 0px;
-                        }
-                    }
-                    .whishList{
-                        .blockProduct{
-                            display: flex;
-                            flex-direction: row;
-                            justify-content: space-between;
-                            align-items: center;
-                            padding: 20px 0px;
-                            border-bottom: 1px solid #e4e4e4;
-                            .itemProduct{
-                                width:15%;
-                            }
-                            .description{
-                                display: flex;
-                                flex-direction: column;
-                                margin-left:-40px;
-                                .price{
-                                    font-size: 1rem;
-                                    font-family: $fontJura;
-                                    color:#BC2327;
-                                    font-weight: 600;
-                                }
-                                .icons{
-                                    img{
-                                        width:20px;
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        }
-    }
+    //     }
+    //     .menuWhishList{
+    //         .choiceWhishList{
+    //             width: 80%;
+    //             display: flex;
+    //             flex-direction:column;
+    //             justify-content: space-between;
+    //             align-items:flex-start;
+    //             margin: 0px auto;
+    //             .whishListWord{
+    //                 width: inherit;
+    //                 font-size: 1.3rem;
+    //                 font-family: $fontJura;
+    //                 color:#BC2327;
+    //                 font-weight: 600;
+    //                 margin:0px ;
+    //             }
+    //             .whish{
+    //                 .category{
+    //                     display: flex;
+    //                     flex-direction: row;
+    //                     justify-content: space-between;
+    //                     align-items: flex-start;
+    //                     padding: 20px 0px;
+    //                     border-bottom: 1px solid #e4e4e4;
+    //                     .titleWhishList{
+    //                         font-size: 1rem;
+    //                         font-family: $fontJura;
+    //                         color:#BC2327;
+    //                         font-weight: 600;
+    //                         margin: 15px 0px;
+    //                     }
+    //                 }
+    //                 .whishList{
+    //                     .blockProduct{
+    //                         display: flex;
+    //                         flex-direction: row;
+    //                         justify-content: space-between;
+    //                         align-items: center;
+    //                         padding: 20px 0px;
+    //                         border-bottom: 1px solid #e4e4e4;
+    //                         .itemProduct{
+    //                             width:15%;
+    //                         }
+    //                         .description{
+    //                             display: flex;
+    //                             flex-direction: column;
+    //                             margin-left:-40px;
+    //                             .price{
+    //                                 font-size: 1rem;
+    //                                 font-family: $fontJura;
+    //                                 color:#BC2327;
+    //                                 font-weight: 600;
+    //                             }
+    //                             .icons{
+    //                                 img{
+    //                                     width:20px;
+    //                                 }
+    //                             }
+    //                         }
+    //                     }
+    //                 }
+    //             }
+    //         }
+    //     }
+    // }
 }
 
 
