--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,6 +17,7 @@
 @import "_payment";
 @import "_sign_In";
 @import "_footer";
+@import "_room_Dark_Mode";
 @import "_error404";
 @import "_media_Landing";
 @import "_media_Queries";
