--- a/scss/_create_Account.scss
+++ b/scss/_create_Account.scss
@@ -11,11 +11,11 @@
     justify-content: center;
     align-items: center;
     .titleCreateAccount{
-        color: #f8f8f8;
+        color: #BC2327;
         filter: drop-shadow(4px 4px 8px #000000 );
         font-size: 4rem;
-        font-weight: 600;
-        font-family: $fontJura;
+        // font-weight: 600;
+        font-family: $fontRubik;
         margin-top: 200px;
     }
     .formCreateAccount{
