Update SocialMedia's GiftCard Section

--- a/views/error404.html
+++ b/views/error404.html
@@ -26,6 +26,9 @@
     <meta name="copyright" content="© [2023] [Diego Marin Mora & Break a Leg Company]" />
 </head>
 <body>
+    <section class="containerError">
+
+    </section>
 
     <!-- Bootstrap -->
 
