Update ctaSentence color

--- a/css/main.css
+++ b/css/main.css
@@ -485,7 +485,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   transition: color 0.3s ease;
 }
 .getOff .ctaSentence:hover {
-  color: #8a8a8a;
+  color: #BC2327;
   text-decoration: underline;
 }
 .getOff #cross {
