--- a/scss/_get_Off.scss
+++ b/scss/_get_Off.scss
@@ -69,7 +69,7 @@
         color: #E0E0E0;
         transition: color .3s ease;
         &:hover{
-            color: #8a8a8a;
+            color: #BC2327;
             text-decoration: underline;
         }
     }
