SCSS store & bestsSellers

--- a/css/main.css
+++ b/css/main.css
@@ -735,7 +735,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   font-weight: 400;
   margin-top: 20px;
   padding: 20px;
-  background-color: rgba(19, 19, 19, 0.9647058824);
+  background-color: #131313;
   transform: translateY(-110%);
   transition: transform 0.3s ease;
 }
@@ -819,7 +819,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   font-weight: 400;
   margin-top: 20px;
   padding: 20px;
-  background-color: rgba(19, 19, 19, 0.9647058824);
+  background-color: #131313;
   transform: translateY(-110%);
   transition: transform 0.3s ease;
 }
