--- a/scss/_best_Sellers.scss
+++ b/scss/_best_Sellers.scss
@@ -35,7 +35,7 @@
                     font-weight: 400;
                     margin-top: 20px;
                     padding:20px;
-                    background-color: #131313f6;
+                    background-color: #131313;
                     transform: translateY(-110%);
                     transition: transform 0.3s ease;
                     .heartIcon{
