--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -13,7 +13,7 @@
                 }
                 .article{
                     width:100%;
-                    height:100%;
+                    height: 100%;
                     overflow: hidden;
                     &:hover > .outFit{
                         transform:scale(103%);
@@ -28,7 +28,7 @@
                         font-weight: 400;
                         margin-top: 20px;
                         padding:20px;
-                        background-color: #131313f6;
+                        background-color: #131313;
                         transform: translateY(-110%);
                         transition: transform 0.3s ease;
                         .heartIcon{
