--- a/scss/_get_Off.scss
+++ b/scss/_get_Off.scss
@@ -5,6 +5,7 @@
     background-position: top center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-color: #131313;
     margin: 200px 0px;
     display: flex;
     flex-direction: column;
