--- a/views/create_Account.html
+++ b/views/create_Account.html
@@ -78,6 +78,14 @@
 
     <main class="mainContainer">
 
+        <!-- Banner Shipping -->
+
+        <section class="bannerShipping">
+            <p class="shipping">
+                ⚡ "Free shipping on orders over $1000" 🛹⚡
+            </p>
+        </section>
+
         <!-- Create Account -->
 
         <section class="sectionCreateAccount">
