--- a/views/store.html
+++ b/views/store.html
@@ -87,6 +87,14 @@
 
     <main class="containerStore">
 
+        <!-- Banner Shipping -->
+
+        <section class="bannerShipping">
+            <p class="shipping">
+                ⚡ "Free shipping on orders over $1000" 🛹⚡
+            </p>
+        </section>
+
         <!-- ArrowUp -->
 
         <section class="arrowUp">
@@ -118,10 +126,10 @@
                 <label for="filterSide" class="headLine">
                     <div class="filter">
                         <img class="filterIcon" src="../img/filter_Icon.svg" alt="Filter icon">
-                        <p class="filterWrord">Filter</p>                      </label>
+                        <p class="filterWord">Filter</p>
                     </div>
                 </label>
-                <p>"Explore a world of possibilities in our online store and make your dreams come true with just one click!"
+                <p class="subtitle">"Explore a world of possibilities in our online store and make your dreams come true with just one click!"
                 </p>
                 <nav class="menuFilter">
                     <label for="filterSide">
