--- a/css/main.css
+++ b/css/main.css
@@ -16,12 +16,43 @@
 }
 
 body {
-  background-color: rgb(19, 19, 19);
+  background-color: #131313;
 }
 
 html .mainContainer {
   width: 100%;
   height: 100%;
+}
+html .mainContainer .bannerShipping {
+  width: 100%;
+  height: 25px;
+  margin-top: 70px;
+}
+html .mainContainer .bannerShipping .shipping {
+  color: #BC2327;
+  font-size: 0.8rem;
+  font-weight: 700;
+  font-family: "Jura", sans-serif;
+  text-align: center;
+  text-transform: uppercase;
+  animation: shipping 4s linear;
+}
+@keyframes shipping {
+  0% {
+    transform: translateX(-100%);
+  }
+  25% {
+    transform: translateX(-750%);
+  }
+  50% {
+    transform: translateX(-50%);
+  }
+  75% {
+    transform: translateX(-25%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
 }
 html .mainContainer .tagGetOff {
   position: fixed;
@@ -30,7 +61,6 @@ html .mainContainer .tagGetOff {
   background-color: black;
   transform: rotate(180deg);
   z-index: 10;
-  box-shadow: 0 0 6px 4px #1f1f1f;
   text-decoration: none;
 }
 html .mainContainer .tagGetOff .discount {
@@ -287,6 +317,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   background-color: #9A9A9A;
   margin-right: 5px;
   text-decoration: none;
+  box-shadow: 1px 5px 6px 2px #363636;
   transform: scale(100%);
   transition: all 0.5s ease;
 }
@@ -421,6 +452,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
+  background-color: #131313;
   margin: 200px 0px;
   display: flex;
   flex-direction: column;
@@ -791,6 +823,37 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
 .containerStore {
   margin: 100px auto 150px;
 }
+.containerStore .bannerShipping {
+  width: 100%;
+  height: 25px;
+  margin-top: -30px;
+}
+.containerStore .bannerShipping .shipping {
+  color: #BC2327;
+  font-size: 0.8rem;
+  font-weight: 700;
+  font-family: "Jura", sans-serif;
+  text-align: center;
+  text-transform: uppercase;
+  animation: shipping 4s linear;
+}
+@keyframes shipping {
+  0% {
+    transform: translateX(-100%);
+  }
+  25% {
+    transform: translateX(-750%);
+  }
+  50% {
+    transform: translateX(-50%);
+  }
+  75% {
+    transform: translateX(-25%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
 .containerStore .sectionStore .sectionCard .cardProducts {
   width: 250px;
   height: auto;
@@ -916,7 +979,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   padding: 5px;
   cursor: pointer;
 }
@@ -934,13 +997,13 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   color: #D9D9D9;
   font-weight: 400;
 }
-.containerStore .sectionFilter .menuFilterSide p {
-  font-size: 1rem;
+.containerStore .sectionFilter .menuFilterSide .subtitle {
+  font-size: 1.1rem;
   font-family: "Jura", sans-serif;
   color: #D9D9D9;
   font-weight: 400;
   padding: 5px;
-  margin: 0px 0px 40px;
+  margin: 50px 0px;
 }
 .containerStore .sectionFilter .menuFilterSide .menuFilter {
   width: 20vw;
