--- a/scss/_hero_Section.scss
+++ b/scss/_hero_Section.scss
@@ -40,6 +40,7 @@
                     background-color: #9A9A9A;
                     margin-right: 5px;
                     text-decoration: none;
+                    box-shadow: 1px 5px 6px 2px #363636;
                     transform:scale(100%);
                     transition: all 0.5s ease;
                     &:hover{
