--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -1,5 +1,38 @@
 .containerStore{
     margin: 100px auto 150px;
+    .bannerShipping{
+        width:100%;
+        height: 25px;
+        margin-top:-30px;
+        .shipping{
+            color:#BC2327;
+            font-size:.8rem;
+            font-weight: 700;
+            font-family: $fontJura;
+            text-align: center;
+            text-transform: uppercase;
+            animation: shipping 4s linear;
+            @keyframes shipping {
+                0%{
+                    transform: translateX(-100%);
+                }
+                25%{
+                    transform: translateX(-750%);
+                }
+                50%{
+                    transform: translateX(-50%);
+                }
+                75%{
+                    transform: translateX(-25%);
+                }
+                100%{
+                    transform: translateX(0%);
+                }
+
+            }
+        }
+
+    }
     .sectionStore{
         .sectionCard{
             .cardProducts{
@@ -136,7 +169,7 @@
                     display: flex;
                     flex-direction: column;
                     justify-content: space-between;
-                    align-items: flex-start;
+                    align-items: center;
                     padding: 5px;
                     cursor:pointer;
                     .filterIcon{
@@ -155,13 +188,13 @@
                     }
                 }
             }
-            p{
-                font-size: 1rem;
+            .subtitle{
+                font-size: 1.1rem;
                 font-family: $fontJura;
                 color: #D9D9D9;
                 font-weight: 400;
                 padding: 5px;
-                margin: 0px 0px 40px;
+                margin: 50px 0px;
             }
             .menuFilter{
                 width:20vw;
