--- a/scss/_new_Arrivals.scss
+++ b/scss/_new_Arrivals.scss
@@ -923,6 +923,9 @@
         width: 200px;
         padding:20px 40px;
         color:#d9d9d9;
+        font-family: $fontJura;
+        font-weight: 700;
+        background-color: #3f3f3f;
         background-color: #3f3f3f;
         text-decoration: none;
         transition: all 0.3s ease;
