--- a/views/store.html
+++ b/views/store.html
@@ -238,8 +238,8 @@
         <!-- Store -->
 
         <section class="sectionStore">
-            <div class="sectionCard d-flex flex-row">
-                <article class="cardProducts m-2">
+            <div class="sectionCard d-flex flex-row gb-5">
+                <article class="cardProducts me-3">
                     <dic class="article">
                         <img src="../img/pic1.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
@@ -249,7 +249,7 @@
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts mx-3">
                     <dic class="article">
                         <img src="../img/pic2.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
@@ -259,7 +259,7 @@
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts mx-3">
                     <dic class="article">
                         <img src="../img/pic15.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
@@ -269,7 +269,7 @@
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts mx-3">
                     <dic class="article">
                         <img src="../img/pic16.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
@@ -279,7 +279,7 @@
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts ms-3">
                     <dic class="article">
                         <img src="../img/pic5.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
@@ -290,8 +290,8 @@
                     </dic>
                 </article>
             </div>
-            <div class="sectionCard g-1 d-flex flex-row">
-                <article class="cardProducts m-2">
+            <div class="sectionCard g-1 d-flex flex-row my-5">
+                <article class="cardProducts me-3">
                     <dic class="article">
                         <img src="../img/pic6.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
@@ -301,7 +301,7 @@
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts mx-3">
                     <dic class="article">
                         <img src="../img/pic22.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
@@ -311,7 +311,7 @@
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts mx-3">
                     <dic class="article">
                         <img src="../img/pic8.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
@@ -321,7 +321,7 @@
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts mx-3">
                     <dic class="article">
                         <img src="../img/pic25.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
@@ -331,7 +331,7 @@
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts ms-3">
                     <dic class="article">
                         <img src="../img/pic18.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
@@ -342,7 +342,7 @@
                     </dic>
                 </article>
             </div>
-            <div class="sectionCard g-1 d-flex flex-row">
+            <div class="sectionCard g-1 d-flex flex-row mt-5">
                 <article class="cardProducts m-2">
                     <dic class="article">
                         <img src="../img/pic11.webp" alt="Outfit Image" class="outFit">
@@ -353,7 +353,7 @@
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts me-3">
                     <dic class="article">
                         <img src="../img/pic24.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
@@ -363,7 +363,7 @@
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts mx-3">
                     <dic class="article">
                         <img src="../img/pic13.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
@@ -373,7 +373,7 @@
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts mx-3">
                     <dic class="article">
                         <img src="../img/pic14.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
@@ -383,7 +383,7 @@
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts ms-3">
                     <dic class="article">
                         <img src="../img/pic37.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
@@ -394,8 +394,8 @@
                     </dic>
                 </article>
             </div>
-            <div class="sectionCard g-1 d-flex flex-row">
-                <article class="cardProducts m-2">
+            <div class="sectionCard g-1 d-flex flex-row mt-5">
+                <article class="cardProducts me-3">
                     <dic class="article">
                         <img src="../img/pic38.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
@@ -405,7 +405,7 @@
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts mx-3">
                     <dic class="article">
                         <img src="../img/pic28.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
@@ -415,7 +415,7 @@
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts mx-3">
                     <dic class="article">
                         <img src="../img/pic29.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
@@ -425,7 +425,7 @@
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts mx-3">
                     <dic class="article">
                         <img src="../img/pic33.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
@@ -435,7 +435,7 @@
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts ms-3">
                     <dic class="article">
                         <img src="../img/pic30.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
@@ -446,8 +446,8 @@
                     </dic>
                 </article>
             </div>
-            <div class="sectionCard g-1 d-flex flex-row">
-                <article class="cardProducts m-2">
+            <div class="sectionCard g-1 d-flex flex-row mt-5">
+                <article class="cardProducts me-3">
                     <dic class="article">
                         <img src="../img/pic20.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
@@ -457,7 +457,7 @@
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts mx-3">
                     <dic class="article">
                         <img src="../img/pic17.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
@@ -467,7 +467,7 @@
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts mx-3">
                     <dic class="article">
                         <img src="../img/pic36.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
@@ -477,7 +477,7 @@
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts mx-3">
                     <dic class="article">
                         <img src="../img/pic35.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
@@ -487,7 +487,7 @@
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts ms-3">
                     <dic class="article">
                         <img src="../img/pic34.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
