--- a/css/main.css
+++ b/css/main.css
@@ -123,6 +123,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
 .newArrivals, .bestSellers, .containerStore {
   max-width: 1300px;
   margin: 0 auto;
+  padding: 0px 30px;
 }
 
 .header {
@@ -137,7 +138,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 0px 20px;
+  padding: 0px 30px;
   z-index: 10;
 }
 .header #menuSide {
@@ -740,7 +741,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   margin-bottom: 100px;
 }
 .bestSellers .sectionCard .cardProducts {
-  width: 250px;
+  width: auto;
   height: auto;
   cursor: pointer;
   overflow: hidden;
@@ -750,12 +751,12 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   box-shadow: 0 0 4px 2px #707070;
 }
 .bestSellers .sectionCard .cardProducts .article {
-  width: 100%;
-  height: 100%;
+  width: inherit;
+  height: inherit;
   overflow: hidden;
 }
 .bestSellers .sectionCard .cardProducts .article:hover > .outFit {
-  transform: scale(103%);
+  transform: scale(110%);
   filter: grayscale(100%);
   box-shadow: 0 0 4px 2px #707070;
 }
@@ -764,12 +765,16 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   flex-direction: column;
   align-items: flex-start;
   color: #D9D9D9;
-  font-weight: 400;
+  font-weight: 500;
+  font-family: "Jura", sans-serif;
   margin-top: 20px;
   padding: 20px;
   background-color: #131313;
-  transform: translateY(-110%);
+  transform: translateY(110%);
   transition: transform 0.3s ease;
+}
+.bestSellers .sectionCard .cardProducts .article .info:hover {
+  transform: translateY(-110%);
 }
 .bestSellers .sectionCard .cardProducts .article .info .heartIcon {
   align-self: self-end;
@@ -779,7 +784,8 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   text-align: center;
   padding: 5px;
   color: #D9D9D9;
-  font-weight: 500;
+  font-weight: 600;
+  font-family: "Jura", sans-serif;
   background-color: #BC2327;
   text-decoration: none;
   transition: all 0.3s ease;
@@ -790,18 +796,18 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   box-shadow: 0 0 4px 2px #BC2327;
 }
 .bestSellers .sectionCard .cardProducts .article .outFit {
-  width: inherit;
+  width: 100%;
   max-width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center center;
   vertical-align: middle;
-  filter: grayscale(20%);
+  filter: grayscale(10%);
   box-shadow: 0 0 4px 2px rgb(112, 112, 112);
   transition: all 0.3s ease;
 }
-.bestSellers .sectionCard .cardProducts .article .outFit:hover > .info {
-  filter: grayscale(100%);
+.bestSellers .sectionCard .cardProducts .article .outFit:hover ~ .info {
+  transform: translateY(-110%);
 }
 .bestSellers .ctaStore {
   display: flex;
@@ -810,6 +816,8 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   width: 200px;
   padding: 20px 40px;
   color: #d9d9d9;
+  font-family: "Jura", sans-serif;
+  font-weight: 700;
   background-color: #3f3f3f;
   text-decoration: none;
   transition: all 0.3s ease;
@@ -855,7 +863,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   }
 }
 .containerStore .sectionStore .sectionCard .cardProducts {
-  width: 250px;
+  width: auto;
   height: auto;
   cursor: pointer;
   overflow: hidden;
@@ -865,12 +873,12 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   box-shadow: 0 0 4px 2px #707070;
 }
 .containerStore .sectionStore .sectionCard .cardProducts .article {
-  width: 100%;
-  height: 100%;
+  width: inherit;
+  height: inherit;
   overflow: hidden;
 }
 .containerStore .sectionStore .sectionCard .cardProducts .article:hover > .outFit {
-  transform: scale(103%);
+  transform: scale(110%);
   filter: grayscale(100%);
   box-shadow: 0 0 4px 2px #707070;
 }
@@ -879,7 +887,8 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   flex-direction: column;
   align-items: flex-start;
   color: #D9D9D9;
-  font-weight: 400;
+  font-weight: 500;
+  font-family: "Jura", sans-serif;
   margin-top: 20px;
   padding: 20px;
   background-color: #131313;
@@ -894,7 +903,8 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   text-align: center;
   padding: 5px;
   color: #D9D9D9;
-  font-weight: 500;
+  font-weight: 600;
+  font-family: "Jura", sans-serif;
   background-color: #BC2327;
   text-decoration: none;
   transition: all 0.3s ease;
@@ -905,18 +915,15 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   box-shadow: 0 0 4px 2px #BC2327;
 }
 .containerStore .sectionStore .sectionCard .cardProducts .article .outFit {
-  width: inherit;
+  width: 100%;
   max-width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center center;
   vertical-align: middle;
-  filter: grayscale(20%);
+  filter: grayscale(10%);
   box-shadow: 0 0 4px 2px #707070;
   transition: all 0.3s ease;
-}
-.containerStore .sectionStore .sectionCard .cardProducts .article .outFit:hover > .info {
-  filter: grayscale(100%);
 }
 .containerStore .arrowUp {
   position: fixed;
@@ -1975,6 +1982,9 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   width: 200px;
   padding: 20px 40px;
   color: #d9d9d9;
+  font-family: "Jura", sans-serif;
+  font-weight: 700;
+  background-color: #3f3f3f;
   background-color: #3f3f3f;
   text-decoration: none;
   transition: all 0.3s ease;
