--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -36,7 +36,7 @@
     .sectionStore{
         .sectionCard{
             .cardProducts{
-                width:250px;
+                width:auto;
                 height:auto;
                 cursor: pointer;
                 overflow: hidden;
@@ -45,11 +45,11 @@
                     box-shadow: 0 0 4px 2px #707070;
                 }
                 .article{
-                    width:100%;
-                    height: 100%;
+                    width:inherit;
+                    height: inherit;
                     overflow: hidden;
                     &:hover > .outFit{
-                        transform:scale(103%);
+                        transform:scale(110%);
                         filter: grayscale(100%);
                         box-shadow: 0 0 4px 2px #707070;
                     }
@@ -58,7 +58,8 @@
                         flex-direction: column;
                         align-items: flex-start;
                         color: #D9D9D9;
-                        font-weight: 400;
+                        font-weight: 500;
+                        font-family: $fontJura;
                         margin-top: 20px;
                         padding:20px;
                         background-color: #131313;
@@ -72,7 +73,8 @@
                             text-align: center;
                             padding: 5px;
                             color: #D9D9D9;
-                            font-weight: 500;
+                            font-weight: 600;
+                            font-family: $fontJura;
                             background-color: #BC2327;
                             text-decoration: none;
                             transition: all 0.3s ease;
@@ -84,18 +86,18 @@
                         }
                     }
                     .outFit{
-                        width:inherit;
+                        width:100%;
                         max-width: 100%;
                         height: 100%;
                         object-fit: cover;
                         object-position: center center;
                         vertical-align: middle;
-                        filter: grayscale(20%);
+                        filter: grayscale(10%);
                         box-shadow: 0 0 4px 2px #707070;
                         transition: all 0.3s ease;
-                        &:hover > .info{
-                            filter: grayscale(100%);
-                        }
+                        // &:hover > .info{
+                        //     filter: grayscale(100%);
+                        // }
                     }
                 }
             }
