--- a/views/store.html
+++ b/views/store.html
@@ -244,7 +244,7 @@
                         <img src="../img/pic1.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
@@ -254,7 +254,7 @@
                         <img src="../img/pic2.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
@@ -264,7 +264,7 @@
                         <img src="../img/pic15.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
@@ -274,7 +274,7 @@
                         <img src="../img/pic16.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
@@ -284,7 +284,7 @@
                         <img src="../img/pic5.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
@@ -296,7 +296,7 @@
                         <img src="../img/pic6.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
@@ -306,7 +306,7 @@
                         <img src="../img/pic22.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
@@ -316,7 +316,7 @@
                         <img src="../img/pic8.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
@@ -326,7 +326,7 @@
                         <img src="../img/pic25.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
@@ -336,29 +336,29 @@
                         <img src="../img/pic18.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
             </div>
             <div class="sectionCard g-1 d-flex flex-row mt-5">
-                <article class="cardProducts m-2">
+                <article class="cardProducts me-3">
                     <dic class="article">
                         <img src="../img/pic11.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts me-3">
+                <article class="cardProducts mx-3">
                     <dic class="article">
                         <img src="../img/pic24.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
@@ -368,7 +368,7 @@
                         <img src="../img/pic13.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
@@ -378,7 +378,7 @@
                         <img src="../img/pic14.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
@@ -388,7 +388,7 @@
                         <img src="../img/pic37.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
@@ -400,7 +400,7 @@
                         <img src="../img/pic38.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
@@ -410,7 +410,7 @@
                         <img src="../img/pic28.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
@@ -420,7 +420,7 @@
                         <img src="../img/pic29.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
@@ -430,7 +430,7 @@
                         <img src="../img/pic33.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
@@ -440,7 +440,7 @@
                         <img src="../img/pic30.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
@@ -452,7 +452,7 @@
                         <img src="../img/pic20.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
@@ -462,7 +462,7 @@
                         <img src="../img/pic17.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
@@ -472,7 +472,7 @@
                         <img src="../img/pic36.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
@@ -482,7 +482,7 @@
                         <img src="../img/pic35.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
@@ -492,7 +492,7 @@
                         <img src="../img/pic34.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
