--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -53,6 +53,7 @@ html{
             z-index: 10;
             text-decoration: none;
             .discount{
+                animation: get-off 0.5s linear ;
                 .title{
                     font-size:1rem;
                     font-family: $fontJura;
@@ -71,7 +72,17 @@ html{
                         // box-shadow: 0 0 4px 2px #BC2327;
                     }
                 }
+                @keyframes get-off{
+                    0%{
+                        transform: translateX(-100%);
+                    }
+                    100%{
+                        transform: translateX(0%);
+                    }
+
+                }
             }
+
         }
         .arrowUp{
             position: fixed;
